fix and streamline scrapers; split up scraping and output